# NATILAH-Technologies

./: .gitignore  Dockerfile  QEngine_README.docx  QOS.ipynb  QStrainer.ipynb  QuantumEngine.ipynb  README.md  ROADMAP.md  Run2.ipynb  THESIS.md  dashboard.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.hypothesis/constants/: 004e722d2b39195a  018739f7205fed82  01bab8b6846a7aee  0201244ade5b05dd  0296c617e091ab2e  02c9a85645440086  031f85f1c11bb00b  03a0bc33c3be41ac  03b0d3ea0ec5c40c  03d65cf548ce3b23  03ed2b59f1db2823  03f93ae630d9f06a  041b39b2cd470cfc  041b82baf95116f0  04364937c878a9e4  049a209bda29ff29  0587954de12948a0  05d3e8b986d0bcd7  05f8f16e63cda530  (+858 more)
LATERWORKON/: SuperQuantumEngine.ipynb  opus_qengine_core.ipynb  v1.0QuantumEngine.ipynb
benchmarks/: gpt_ddp_benchmark.py
config/: default.yaml
docs/: ENGINEERING_ROADMAP.md
qos/: QOS.ipynb  __init__.py  report.py  runner.py  scheduler.py
runs/: demo_20260304_145246.json  demo_20260304_154614.json  demo_20260304_154707.json  demo_20260304_154901.json  demo_20260304_155055.json  demo_20260304_162835.json  demo_20260304_163436.json  demo_20260304_164644.json  gpt_benchmark_20260305_102836.json  gpt_benchmark_20260305_111031.json  gpt_benchmark_20260305_111113.json  gpt_benchmark_20260305_111154.json  gpt_benchmark_20260305_111236.json  qaoa_training_dataset.json  qos_history.json
tests/: conftest.py  run_demo.py  test_benchmarks.py  test_config.py  test_features.py  test_integration.py  test_models.py  test_pipeline.py  test_properties.py  test_qos.py  test_quantum_advantage.py  test_quantum_scheduler.py  test_scale.py  test_solvers.py  test_stages.py
(+78 files in other folders)
